# dapp-runner

./: .flake8  .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build_publish.yml  check.yml  goth.yml  unit_test.yml
configs/: default.yaml  goth.yaml
dapp_runner/: __init__.py  __main__.py  _util.py  log.py  metaclasses.py  service.py  singleton.py
dapp_runner/api/: __init__.py  __main__.py
dapp_runner/descriptor/: __init__.py  base.py  config.py  dapp.py  error.py  manifest.py  parser.py  service.py
dapp_runner/runner/: __init__.py  error.py  infile.py  payload.py  runner.py  service.py  strategy.py  streams.py
examples/: http-proxy-explicit-network.yaml  http-proxy-specific-port.yaml  http-proxy.yaml  simple-service.yaml  yagna-config-template.yaml
tests/factories/descriptor/: __init__.py  config.py  dapp.py
tests/factories/runner/: __init__.py  runner.py
tests/goth_tests/: conftest.py  test_simple_service.py  test_webapp.py  utils.py
tests/unit/: conftest.py
tests/unit/descriptor/: test_base.py  test_config.py  test_dapp.py  test_manifest.py  test_parser.py  test_service.py
tests/unit/runner/: test_runner.py  test_service.py
tests/unit/util/: test_util.py  util.py
