[tool.poetry]
name = "dapp-runner"
version = "0.0.0a3"
description = "Golem dapp-runner - a high-level interface for running decentralized applications using the Golem Network."
authors = ["Golem Factory <contact@golem.network>"]
license = "LGPL-3.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development",
  "Topic :: System :: Distributed Computing",
]
repository = "https://github.com/golemfactory/dapp-runner"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4"
click = "^8.1"
dpath = "^2.0"
pyyaml = "^6.0"
shortuuid = "^1.0"
ansicolors = "^1.1.8"
networkx = "^2.8"
yapapi = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^3.9"
flake8-docstrings = "^1.6"
mypy = "^0.942"
poethepoet = "^0.13"
pytest = "^7.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
liccheck = "^0.7.2"

[tool.poetry.scripts]
dapp-runner = "dapp_runner.__main__:_cli"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = true

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "apache 2",
  "apache",
  "Apache Software",
  "MPL-2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "MIT",
  "LGPL",
  "LGPL-3.0-or-later",
  "GNU Lesser General Public License v3 or later (LGPLv3+)",
  "GNU Lesser General Public License v3 (LGPLv3)",
  "Python Software Foundation",
  "ISC",
  "ISC License (ISCL)",
]
unauthorized_licenses = [
  "gpl v3"
]

[tool.poe.tasks]
lint = "flake8"
codestyle = "black --check --diff ."
typecheck  = "mypy --install-types --non-interactive --ignore-missing-imports --check-untyped-defs --warn-unused-ignores --show-error-codes ."
_liccheck_export = "poetry export -f requirements.txt -o .requirements.txt"
_liccheck_verify = "liccheck -r .requirements.txt"
liccheck = ["_liccheck_export", "_liccheck_verify"]
check = ["lint", "codestyle", "typecheck", "liccheck"]
unittest = "pytest --cov --cov-report html --cov-report term -sv tests/unit"
test = ["unittest", "check"]

[tool.pytest.ini_options]
asyncio_mode= "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
